[package]
name = "poe_bundle"
version = "1.0.0"
authors = ["Daniel Dimovski <daniel.k.dimovski@gmail.com>"]
edition = "2018"
links = "libooz"

[dependencies]
ggpk = { git = "https://github.com/daniel-dimovski/ggpk", branch = "master" }
memmap = "0.7.0"
byteorder = "1.3.4"
base64 = "0.13.0"
log = "0.4.11"
clap = "2.33.3"
rayon = "1.5.0"
rand = "0.7.3"
libc = "0.2.0"

[build-dependencies]
cmake = "0.1.45"